--- a/app.html
+++ b/app.html
@@ -1,6 +1,12 @@
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+  </head>
 
-  <body>
+  <body className="">
 
     <div id="app-container"></div>
 
